{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 229,
  "lineage": "0dc56a2b-3a07-b16b-5492-c84fc94e3c18",
  "resources": [
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03a40d63309dd8353",
            "owner_id": "851186901830",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-07cda9ab70574aeec"
          }
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb/b9f8d1b0dfbb7f45",
            "arn_suffix": "app/alb/b9f8d1b0dfbb7f45",
            "dns_name": "alb-25846237.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb/b9f8d1b0dfbb7f45",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-0374603c720424745"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0676d8ea2a001e70f"
              },
              {
                "subnet_id": "subnet-0a0c4f2e80a025ca5"
              }
            ],
            "subnets": [
              "subnet-0676d8ea2a001e70f",
              "subnet-0a0c4f2e80a025ca5"
            ],
            "vpc_id": "vpc-07cda9ab70574aeec",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_security_group.alb",
            "aws_subnet.az1",
            "aws_subnet.az2"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb-internal/f2a6975a843e363b",
            "arn_suffix": "app/alb-internal/f2a6975a843e363b",
            "dns_name": "internal-alb-internal-796720126.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb-internal/f2a6975a843e363b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-internal",
            "security_groups": [
              "sg-0e9cc74886c68ac29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0676d8ea2a001e70f"
              },
              {
                "subnet_id": "subnet-0a0c4f2e80a025ca5"
              }
            ],
            "subnets": [
              "subnet-0676d8ea2a001e70f",
              "subnet-0a0c4f2e80a025ca5"
            ],
            "vpc_id": "vpc-07cda9ab70574aeec",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb/b9f8d1b0dfbb7f45/3d5b081fef5b49c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb/b9f8d1b0dfbb7f45/3d5b081fef5b49c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb/b9f8d1b0dfbb7f45",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb-internal/f2a6975a843e363b/320367f92f1ac92a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb-internal/f2a6975a843e363b/320367f92f1ac92a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:loadbalancer/app/alb-internal/f2a6975a843e363b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group/9ce237bff0fcbe11",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener-rule/app/alb/b9f8d1b0dfbb7f45/3d5b081fef5b49c9/a4759bdf47369b44",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener-rule/app/alb/b9f8d1b0dfbb7f45/3d5b081fef5b49c9/a4759bdf47369b44",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb/b9f8d1b0dfbb7f45/3d5b081fef5b49c9",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group-internal/ad5c0daaa1e6bdbf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener-rule/app/alb-internal/f2a6975a843e363b/320367f92f1ac92a/b38af3a3aa1df300",
            "condition": [
              {
                "field": "path-pattern",
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener-rule/app/alb-internal/f2a6975a843e363b/320367f92f1ac92a/b38af3a3aa1df300",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:listener/app/alb-internal/f2a6975a843e363b/320367f92f1ac92a",
            "priority": 100
          },
          "depends_on": [
            "aws_lb_listener.http",
            "aws_lb_target_group.asg"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group/9ce237bff0fcbe11",
            "arn_suffix": "targetgroup/lb-target-group/9ce237bff0fcbe11",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group/9ce237bff0fcbe11",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07cda9ab70574aeec"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group-internal/ad5c0daaa1e6bdbf",
            "arn_suffix": "targetgroup/lb-target-group-internal/ad5c0daaa1e6bdbf",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:851186901830:targetgroup/lb-target-group-internal/ad5c0daaa1e6bdbf",
            "lambda_multi_value_headers_enabled": false,
            "name": "lb-target-group-internal",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07cda9ab70574aeec"
          }
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03a40d63309dd8353",
            "id": "r-rtb-0860b857927def0fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0860b857927def0fe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:security-group/sg-0374603c720424745",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0374603c720424745",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": null,
            "owner_id": "851186901830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07cda9ab70574aeec"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:security-group/sg-0e9cc74886c68ac29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9cc74886c68ac29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-internal",
            "name_prefix": null,
            "owner_id": "851186901830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07cda9ab70574aeec"
          }
        }
      ]
    },
    {
      "module": "module.private_cloud_sql",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:security-group/sg-03dc3abef80283bdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dc3abef80283bdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-instance",
            "name_prefix": null,
            "owner_id": "851186901830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07cda9ab70574aeec"
          }
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:security-group/sg-0d75d4aeff6042fb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d75d4aeff6042fb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance",
            "name_prefix": null,
            "owner_id": "851186901830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07cda9ab70574aeec"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_internal",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:security-group/sg-09e5a6799ed9560b8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e5a6799ed9560b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "instance_internal",
            "name_prefix": null,
            "owner_id": "851186901830",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-07cda9ab70574aeec"
          }
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:subnet/subnet-0a0c4f2e80a025ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a0c4f2e80a025ca5",
            "map_public_ip_on_launch": true,
            "owner_id": "851186901830",
            "tags": {
              "Name": "main-subnet"
            },
            "vpc_id": "vpc-07cda9ab70574aeec"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:subnet/subnet-0676d8ea2a001e70f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0676d8ea2a001e70f",
            "map_public_ip_on_launch": true,
            "owner_id": "851186901830",
            "tags": {
              "Name": "main-subnet"
            },
            "vpc_id": "vpc-07cda9ab70574aeec"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.lb_global",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:851186901830:vpc/vpc-07cda9ab70574aeec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05abe28e0a0974b28",
            "default_route_table_id": "rtb-0860b857927def0fe",
            "default_security_group_id": "sg-0ded65b5b50b39d61",
            "dhcp_options_id": "dopt-68b97203",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07cda9ab70574aeec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0860b857927def0fe",
            "owner_id": "851186901830"
          }
        }
      ]
    }
  ]
}